Make all 4 drills interactive; add write-it-yourself exercise guide
Two real gaps, both flagged directly by Sid in the same session.

1. "predict before you run" was a docstring instruction with no
   mechanism behind it - nothing forced or even asked for a prediction,
   so it was unclear what to actually do. All 4 drill files
   (gotchas.py, llm_basics.py, sql_playground.py, Gotchas.java) now use
   a predict()/input() pair (Scanner.nextLine() in Java): the script
   prints the code and a plain-English question, then blocks on input()
   until the reader types something and presses Enter, then reveals the
   real answer. Verified all 4 end to end by piping dummy keystrokes to
   stdin. Synced the platform's "reveal expected output" panels to the
   new transcript format so they no longer show the old, stale output.

2. exercises.py (12 NotImplementedError stubs, graded, no-AI-assistance)
   had no scaffolding beyond a docstring per function - opened the file,
   had no idea what to do. Added EXERCISES[w] on the platform: one
   collapsible entry per function with the problem restated plainly, a
   design question to answer BEFORE writing code (what approach, what
   structure, why - the "explain your design to an interviewer" muscle),
   one hint behind a second nested reveal, and the exact function name
   to edit. Deliberately no solution anywhere in it - that's what
   check.py and grade-week-N review are for. Grouped into a suggested
   Tuesday/Friday order instead of 12 undifferentiated functions.

Both patterns written into MASTER_PLAN.md section 2 as standing rules
for every future week, per his explicit ask.